--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
         ports:
             - 5432:5432
         environment:
-            - POSTGRES_USER=docker
-            - POSTGRES_PASSWORD=senha
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=docker
             - POSTGRES_DB=ignite
         volumes:
             - pgdata:/data/postgres
