--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,12 +1,15 @@
 {
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5432,
-    "username": "docker",
-    "password": "senha",
-    "database": "ignite",
-    "migrations": ["./src/database/migrations/*.ts"],
-    "cli": {
-        "migrationsDir": "./src/database/migrations"
-    }
+   "type": "postgres",
+   "host": "localhost",
+   "port": 5432,
+   "username": "postgres",
+   "password": "docker",
+   "database": "ignite",
+   "entities":[
+      "./src/modules/**/entities/*.ts"
+   ],
+   "migrations": [
+      "./src/database/migrations/*.ts"
+   ],
+   "autoSchemaSync":true
 }
