--- a/ormconfig.json
+++ b/ormconfig.json
@@ -11,5 +11,8 @@
    "migrations": [
       "./src/database/migrations/*.ts"
    ],
+   "cli": {
+      "migrationsDir":"./src/database/migrations/"
+  },
    "autoSchemaSync":true
 }
